# nvision

./: .dockerignore  DEPLOYMENT.md  Dockerfile  check_db.py  check_phoenix.py  docker-compose.yml  init_pab.py  main.py  migrate_pab.py  models.py  n-vision.db  prms.db  pyproject.toml  repro_test.py  schemas.py
static/: styles.css
static/js/: app.js
templates/: base.html  bookings.html  employee_plan.html  employees.html  heatmap.html  login.html  pab_list.html  project_add.html  project_detail.html  project_edit.html  projects.html  projects_overdue.html  reports.html  settings.html  staffing_add.html  steering_board.html
